Add packages and fix typo in some files. Also add new class in BFS folder